Added structure Edited git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,11 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+# SpecFlow specific
+*.feature.cs
+*.feature.xlsx.*
+*.Specs_*.html
+
+# Visual Studio temp something
+.vs/
